--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "css-loader": "^0.28.7",
+    "html-webpack-plugin": "^2.30.1",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.8.2"
   },
